syntax = "proto3";

package razpravljalnica;

option go_package = "razpravljalnica/pb;pb";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

////////////////////////////////////////////////////////////////////////////////
// Basic data types
////////////////////////////////////////////////////////////////////////////////

message User {
  int64 id = 1;
  string name = 2;
  int64 sequence_number = 3; // sequence number for tracking propagation
  bool committed = 4; // true if operation reached tail and acked back
}

message Topic {
  int64 id = 1;
  string name = 2;
  int64 sequence_number = 3; // sequence number for tracking propagation
  bool committed = 4; // true if operation reached tail and acked back
}

message Message {
  int64 id = 1;
  int64 topic_id = 2;
  int64 user_id = 3;
  string text = 4;
  google.protobuf.Timestamp created_at = 5;
  int32 likes = 6;
  int64 sequence_number = 7; // sequence number for tracking propagation
  bool committed = 8; // true if operation reached tail and acked back
}

enum OpType {
  OP_POST = 0;
  OP_LIKE = 1;
  OP_DELETE = 2;
  OP_UPDATE = 3;
  OP_CREATE_USER = 4;
  OP_CREATE_TOPIC = 5;
}

message NodeInfo {
  string node_id = 1;
  string address = 2;
}

////////////////////////////////////////////////////////////////////////////////
// Chain replication internal log/sync
////////////////////////////////////////////////////////////////////////////////

message LogEntry {
  int64 sequence_number = 1;
  string request_id = 2;
  OpType op = 3;

  // exactly one should be used based on op
  User user = 4;
  Topic topic = 5;
  Message message = 6;
}

message GetLastAppliedRequest {}
message GetLastAppliedResponse { int64 last_applied_seq = 1; }

message SyncFromRequest { int64 from_seq_exclusive = 1; }
message SyncFromResponse { repeated LogEntry entries = 1; }

////////////////////////////////////////////////////////////////////////////////
// Data plane
////////////////////////////////////////////////////////////////////////////////

service MessageBoard {
  // Writes (only to head)
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc CreateTopic(CreateTopicRequest) returns (Topic);
  rpc PostMessage(PostMessageRequest) returns (Message);
  rpc UpdateMessage(UpdateMessageRequest) returns (Message);
  rpc DeleteMessage(DeleteMessageRequest) returns (google.protobuf.Empty);
  rpc LikeMessage(LikeMessageRequest) returns (Message);

  // Subscription routing (only to head)
  rpc GetSubscriptionNode(SubscriptionNodeRequest) returns (SubscriptionNodeResponse);

  // Reads (only to tail)
  rpc ListTopics(google.protobuf.Empty) returns (ListTopicsResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);

  // Subscribe (to node returned by head)
  rpc SubscribeTopic(SubscribeTopicRequest) returns (stream MessageEvent);

  // Internal chain propagation (between nodes)
  rpc PropagateEntry(LogEntry) returns (google.protobuf.Empty);
  rpc Ack(AckRequest) returns (google.protobuf.Empty);

  // Internal sync helpers (between nodes)
  rpc GetLastApplied(GetLastAppliedRequest) returns (GetLastAppliedResponse);
  rpc SyncFrom(SyncFromRequest) returns (SyncFromResponse);

  rpc ConfigureChain(ConfigureChainRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
  string name = 1;
  string request_id = 2; // idempotency key (client-generated)
}

message CreateTopicRequest {
  string name = 1;
  string request_id = 2; // idempotency key (client-generated)
}

message PostMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  string text = 3;
  string request_id = 4; // idempotency key (client-generated)
}

message DeleteMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
  string request_id = 4; // idempotency key (client-generated)
}

message UpdateMessageRequest {
  int64 topic_id = 1;
  int64 user_id = 2;
  int64 message_id = 3;
  string text = 4;
  string request_id = 5; // idempotency key (client-generated)
}

message LikeMessageRequest {
  int64 topic_id = 1;
  int64 message_id = 2;
  int64 user_id = 3;
  string request_id = 4; // idempotency key (client-generated)
}

message ListTopicsResponse {
  repeated Topic topics = 1;
}

message GetMessagesRequest {
  int64 topic_id = 1;
  int64 from_message_id = 2;
  int32 limit = 3;
}

message GetMessagesResponse {
  repeated Message messages = 1;
}

message SubscribeTopicRequest {
  repeated int64 topic_id = 1;
  int64 user_id = 2;
  int64 from_message_id = 3;
  string subscribe_token = 4;
}

message SubscriptionNodeRequest {
  int64 user_id = 1;
  repeated int64 topic_id = 2;
}

message SubscriptionNodeResponse {
  string subscribe_token = 1;
  NodeInfo node = 2;
}

message MessageEvent {
  int64 sequence_number = 1;
  OpType op = 2;
  Message message = 3;
  google.protobuf.Timestamp event_at = 4;
}

message AckRequest {
  int64 sequence_number = 1;
}

////////////////////////////////////////////////////////////////////////////////
// Control plane
////////////////////////////////////////////////////////////////////////////////

service ControlPlane {
  rpc GetClusterState(google.protobuf.Empty) returns (GetClusterStateResponse);
  rpc ConfigureChain(ConfigureChainRequest) returns (google.protobuf.Empty);

  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  rpc Join(JoinRequest) returns (JoinResponse);
  rpc Leave(LeaveRequest) returns (LeaveResponse);
}

message GetClusterStateResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
  repeated NodeInfo chain = 3;
}

message ConfigureChainRequest {
  repeated NodeInfo nodes = 1; // ordered head -> tail
}

message HeartbeatRequest {
  string node_id = 1;
  string address = 2;
  int64 last_applied_seq = 3;
}

message HeartbeatResponse {
  bool ok = 1;
}

message JoinRequest {
  string node_id = 1;
  string address = 2;
}

message JoinResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
  repeated NodeInfo chain = 3;
}

message LeaveRequest {
  string node_id = 1;
}

message LeaveResponse {
  NodeInfo head = 1;
  NodeInfo tail = 2;
  repeated NodeInfo chain = 3;
}
